--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
             </ol>
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
@@ -83,7 +84,10 @@
                     <img src="./images/icpc.jpg" width="460" height="345">
                 </div>
                 <div class="item">
-                    <img src="./images/kerala.JPG" width="460" height="345">
+                    <img src="./images/kerala.jpg" width="460" height="345">
+                </div>
+                <div class="item">
+                    <img src="./images/sandeep.jpg" width="460" height="345">
                 </div>
                 <div class="item">
                     <img src="./images/mandapam.jpg" width="460" height="345">
