Add responsive images

--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="./images/desert.jpg">
+                    <img src="./images/desert.jpg" class="img-responsive" alt="Responsive image">
                     <div class="carousel-caption">
                         <h3>Dubai</h3>
                         <p>Desert Safari.</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./images/icpc.jpg">
+                    <img src="./images/icpc.jpg" class="img-responsive" alt="Responsive image">
                     <div class="carousel-caption">
                         <h3>ACM ICPC Chennai Multi Provincial Contest 2015</h3>
                         <p>Secured 6th Position out of 140 teams.</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./images/mandapam.jpg">
+                    <img src="./images/mandapam.jpg" class="img-responsive" alt="Responsive image">
                     <div class="carousel-caption">
                         <h3>Mandapam, Tamil Nadu</h3>
                     </div>
