Add page view counter

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="chrome=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="description" content="Sandeeprds95.GitHub.io : A complete site about me.">
-
 
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="./plugins/bootstrap/css/bootstrap.min.css">
@@ -24,10 +24,10 @@
     </head>
 
     <body id="page-top" data-spy="scroll" data-target=".navbar" data-offset="50">
-        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation"  id="fixed-header">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand page-scroll" href="#page-top">
+                    <a class="navbar-brand page-scroll name" href="#page-top">
                         <h1><span class="light">Sandeep Ravindra</span></h1>
                         <h5><i class="fa fa-tags" id="tagline"></i> <span>Coder. Web Developer. Thinker. </span></h5>
                     </a>
@@ -38,9 +38,9 @@
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                        <li class="hidden">
+                        <!--<li class="hidden">
                             <a href="#page-top"></a>
-                        </li>
+                        </li>-->
                         <li>
                             <a class="page-scroll" href="/">Home</a>
                         </li>
@@ -197,7 +197,6 @@
             </div>
             <br><br>
         </div>
-
         <!-- Footer -->
         <footer class="bg-1">
             <div class="text-center">
@@ -206,16 +205,19 @@
                 </a><br><br>
             </div>
             <div class="text-center">
-                <a href="https://www.linkedin.com/in/sandeeprds95" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name"></span></a>
-                <a href="https://www.instagram.com/sandeeprds95/" target="_blank"><i class="fa fa-instagram fa-fw"></i> <span class="network-name"></span></a>
-                <a href="https://www.facebook.com/sandeeprds95" target="_blank"><i class="fa fa-facebook fa-fw"></i> <span class="network-name"></span></a>
-                <a href="https://github.com/Sandeeprds95/" target="_blank"><i class="fa fa-github fa-fw"></i> <span class="network-name"></span></a>
-                <a href="https://twitter.com/ImSandeepR" target="_blank"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
+                <a href="https://www.linkedin.com/in/sandeeprds95" target="_blank"><i class="fa fa-linkedin fa-2x"></i> <span class="network-name"></span></a>
+                <a href="https://www.instagram.com/sandeeprds95/" target="_blank"><i class="fa fa-instagram fa-2x"></i> <span class="network-name"></span></a>
+                <a href="https://www.facebook.com/sandeeprds95" target="_blank"><i class="fa fa-facebook fa-2x"></i> <span class="network-name"></span></a>
+                <a href="https://github.com/Sandeeprds95/" target="_blank"><i class="fa fa-github fa-2x"></i> <span class="network-name"></span></a>
+                <a href="https://twitter.com/ImSandeepR" target="_blank"><i class="fa fa-twitter fa-2x"></i> <span class="network-name"></span></a>
                 <br><br>
-                <h5>Copyright <i class="fa fa-copyright copyright"> Sandeep Ravindra 2015</i></h5>
+                <div style="text-align:center;">
+                    <script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/18042-9-5.js"></script>
+                </div>
+                <br><br>
+                <h5>Copyright <i class="fa fa-copyright"></i> Sandeep Ravindra 2015</h5>
                 <br>
             </div>
-
         </footer>
     </body>
 </html>
