Add work experience

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                     <p>I discovered my love for coding and development while studying in the 11th grade.
                                         I feel that this field is not only interesting, but also challenging.
                                         Building useful products has a sense of satisfaction associated to it which is irreplaceable.
-                                        This is why, after graduation I will be pursuing my career in this field as a full time employee.
+                                        This is why, after graduation I will be pursuing my career in this field.
                                     </p>
                                 </div>
                             </div>
@@ -119,7 +119,7 @@
                                 <div>
                                     <p>
                                         Technology has revolutionized the world we're living in.
-                                        The advancements in this field is so immense that, every second that passes by, something new and unique is introduced to this world.
+                                        The advancement in this field is so immense that, every second that passes by, something new and unique is introduced to this world.
                                         According to me, advancements in technology will not only help us grow but also bridge the gaps between various countries.
                                     </p>
                                 </div>
@@ -358,6 +358,102 @@
                             </div>
                         </div>
                     </section>
+                </div>
+            </div>
+
+
+            <div id="work" class="container">
+                <div class="myCard text-center">
+                    <span class="fa fa-laptop fa-5x text-center"></span>
+                    <h2><strong>Work Experience</strong></h2>
+                    <hr width="50%" align="center" size=5 noshade>
+                    <hr width="30%" align="center" size=5 noshade>
+                    <hr width="10%" align="center" size=5 noshade>
+                    <header class="text-center">
+                        <h2>
+                            The only way to do great work, is to love what you do.
+                            <br>
+                            Or, to do what you love.
+                        </h2>
+                        <p>
+                            I enjoy writing code, and building stuff that is useful.
+                        </p>
+                    </header>
+                </div>
+                <div class="work-wrapper">
+                    <div class="row">
+                        <table class="table borderless projectHeading">
+                            <tbody>
+                            <tr>
+                                <td id="title-left">BluCabs Web Application</td>
+                                <td id="title-right">Front-End Development Intern</td>
+                            </tr>
+                            <tr>
+                                <td id="subtitle-left">Underblu Technologies Solutions Pvt. Ltd.</td>
+                                <td id="subtitle-right">Summer 2015</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="table borderless projectPoints">
+                            <tbody>
+                            <tr>
+                                <td id="desc">
+                                    <ul>
+                                        <li> Developed a dynamic web application for cab companies using AngularJS for a faster response.</li>
+                                        <li> Other languages used are JavaScript, jQuery.</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="table borderless projectHeading">
+                            <tbody>
+                            <tr>
+                                <td id="title-left">Y Chassis Robot</td>
+                                <td id="title-right">Programmer</td>
+                            </tr>
+                            <tr>
+                                <td id="subtitle-left">SRM Team Robocon</td>
+                                <td id="subtitle-right">July'14 - Oct'14</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="table borderless projectPoints">
+                            <tbody>
+                            <tr>
+                                <td id="desc">
+                                    <ul>
+                                        <li> Created a Y chassis robot interfaced with Arduino atMega 2560, Arduino Uno, Arduino Nano, and a PS2 controller.</li>
+                                        <li> The microcontrollers were programmed using Arduino C.</li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="table borderless projectHeading">
+                            <tbody>
+                            <tr>
+                                <td id="title-left">Technical Events</td>
+                                <td id="title-right">Technical Member</td>
+                            </tr>
+                            <tr>
+                                <td id="subtitle-left">Google Students Club</td>
+                                <td id="subtitle-right">July'13 - May'14</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <table class="table borderless projectPoints">
+                            <tbody>
+                            <tr>
+                                <td id="desc">
+                                    <ul>
+                                        <li>Handled server-client interactions and built a <strong>log processing system</strong> for the cloud computing based startup under <strong>Microsoft Accelerator programme</strong></li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </article>
