Add achiements and contact me

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li><a href="#academics">Academics</a></li>
                             <li><a href="#work">Work</a></li>
                             <li><a href="#achievements">Achievements</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#contactme">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="col-sm-4" id="contactme">
+                            <div class="col-sm-4" id="contact">
                                 <h3 class="text-center"><strong>Contact Me</strong></h3><br>
                                 <a href="#contact" data-toggle="collapse">
                                     <i class="fa fa-comments fa-5x"></i>
@@ -447,13 +447,93 @@
                             <tr>
                                 <td id="desc">
                                     <ul>
-                                        <li>Handled server-client interactions and built a <strong>log processing system</strong> for the cloud computing based startup under <strong>Microsoft Accelerator programme</strong></li>
+                                        <li>Conducted several technical and non-technical events as the event head.</li>
                                     </ul>
                                 </td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
+                </div>
+            </div>
+            <!--Work Experience Ends-->
+            <!-- Achievements Starts -->
+            <div id="achievements" class="container">
+                <div class="myCard text-center">
+                    <span class="fa fa-trophy fa-5x text-center"></span>
+                    <h2><strong>Achievements</strong></h2>
+                    <hr>
+                    <hr width="50%" align="center" size=5 noshade>
+                    <hr width="30%" align="center" size=5 noshade>
+                    <hr width="10%" align="center" size=5 noshade>
+                    <header class="text-center">
+                        <h2> It always seems impossible until it's done.
+                            <br>
+                            Imagine. Believe. Achieve.</h2>
+                        <p>
+                            I maintain faith in the beauty of my dreams and set goals to achieve them.
+                            <br>
+                            Presenting some of the achievements I am proud about...
+                            <br>
+                        </p>
+                    </header>
+                </div>
+                <div class="achievement-wrapper">
+                    <ul>
+                        <li>ACM ICPC : Secured 6th rank out of 140 teams at the India Chennai Multi-Provincial Contest 2015.</li>
+                        <li>Secured 1st position in Code Mortem, 2nd position in Clave Cluster and Source Code 1.0, coding competitions at Aaruush 2015, SRM University.</li>
+                        <li>Secured 100% score and 99% percentile in the C Programming course by IIT Kanpur in 2014.</li>
+                        <li>Secured 1st position in “ROBOTICS”, out of top 60 teams pan India, during TECHNICHE, 2012 (Annual Techno Management Festival held during 30th August – 02 September, 2012) at IIT Guwahati.</li>
+                        <li>Secured 1st position in “I-Expo” of technical fest EPIPHANY held on 13th-14th August 2013 SRM University.</li>
+                        <li>Secured 1st position in TECHKNOW’13, organised by Dept. of Physics and Nanotechnology, SRM University.</li>
+                        <li>Secured international rank 172 and state rank 13 in the finals of 12th SOF-National Cyber Olympiad, and international rank 69 in the first level.</li>
+                        <li>Participated in National Level Science Exhibition 2011-2012 in Ahmedabad. Won 1st prize at Regional and School Level.</li>
+                        <li>Secured 112 rank at Code Niche’15 out of 1000 programmers on www.codechef.com.</li>
+                        <li>Elected as the Head Boy for the year 2012-2013 at Kendriya Vidyalaya CLRI, Chennai.</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Achievements Ends-->
+            <!-- Contact me starts-->
+            <div id="contactme" class="container">
+                <div class="myCard text-center">
+                    <span class="fa fa-envelope fa-5x text-center"></span>
+                    <h2><strong>Say Hello</strong></h2>
+                    <hr>
+                    <hr width="50%" align="center" size=5 noshade>
+                    <hr width="30%" align="center" size=5 noshade>
+                    <hr width="10%" align="center" size=5 noshade>
+                    <header class="text-center">
+                        <h2> If you happen to be at SRM University, do visit.</h2>
+                            <br>
+                        <p>
+                            T307, Abode Valley
+                            <br>
+                            Potheri, Chennai
+                            <br>
+                            India
+                            <br>
+                        </p>
+                        <br><br>
+                        <p>Or, use the links below to reach out to me.</p>
+                    </header>
+                </div>
+                <br>
+                <footer id="footer">
+                        <ul class="social-icons icon-circle icon-zoom list-unstyled list-inline">
+                            <li><a href="#"><i class="fa fa-github"></i></a></li>
+                            <li> <a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li> <a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+                        </ul>
+                </footer>
+                <br>
+                <hr width="10%" align="center" size=5 noshade>
+                <hr width="40%" align="center" size=5 noshade>
+                <hr width="70%" align="center" size=5 noshade>
+                <br><br>
+                <div id="copyright">
+                    <h5><i class="fa fa-copyright fa-1x"></i> Sandeep Ravindra 2015. All Rights Reserved.</h5>
                 </div>
             </div>
         </article>
