Add page counter

--- a/index.html
+++ b/index.html
@@ -521,17 +521,22 @@
                 <br>
                 <footer id="footer">
                         <ul class="social-icons icon-circle icon-zoom list-unstyled list-inline">
-                            <li><a href="#"><i class="fa fa-github"></i></a></li>
-                            <li> <a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li> <a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li> <a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://github.com/Sandeeprds95/"><i class="fa fa-github"></i></a></li>
+                            <li> <a href="https://www.linkedin.com/in/sandeeprds95"><i class="fa fa-linkedin"></i></a></li>
+                            <li> <a href="https://www.facebook.com/sandeeprds95"><i class="fa fa-facebook"></i></a></li>
+                            <li> <a href="https://twitter.com/ImSandeepR"><i class="fa fa-twitter"></i></a></li>
                         </ul>
                 </footer>
                 <br>
                 <hr width="10%" align="center" size=5 noshade>
                 <hr width="40%" align="center" size=5 noshade>
                 <hr width="70%" align="center" size=5 noshade>
-                <br><br>
+                <br>
+                <br/>
+                <div style="text-align:center;">
+                    <script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/18222-9-5.js"></script>
+                </div>
+                
                 <div id="copyright">
                     <h5><i class="fa fa-copyright fa-1x"></i> Sandeep Ravindra 2015. All Rights Reserved.</h5>
                 </div>
