final touch ups

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <div class="row">
                             <div class="col-sm-4" id="resume">
                                 <h3 class="text-center"><strong>Resume</strong></h3><br>
-                                <a href="" data-toggle="collapse">
+                                <a href="https://goo.gl/QfpW77" target="_blank">
                                     <i class="fa fa-download fa-5x"></i>
                                 </a>
                                 <br><br>
@@ -161,7 +161,7 @@
                             </div>
                             <div class="col-sm-4" id="contact">
                                 <h3 class="text-center"><strong>Contact Me</strong></h3><br>
-                                <a href="#contact" data-toggle="collapse">
+                                <a href="#contactme">
                                     <i class="fa fa-comments fa-5x"></i>
                                 </a>
                                 <br><br>
@@ -536,7 +536,7 @@
                 <div style="text-align:center;">
                     <script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/18222-9-5.js"></script>
                 </div>
-                
+
                 <div id="copyright">
                     <h5><i class="fa fa-copyright fa-1x"></i> Sandeep Ravindra 2015. All Rights Reserved.</h5>
                 </div>
