--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <!-- Custom Scripts -->
         <script type="text/javascript" src="./scripts/main.js"></script>
 
+        <!-- Favicon -->
+        <link rel="msapplication-square310x310logo" href="images/favicon.png">
+    
         <title>Sandeep Ravindra</title>
     </head>
 
