--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="./scripts/main.js"></script>
 
         <!-- Favicon -->
-        <link rel="msapplication-square310x310logo" href="images/favicon.png">
+        <link rel="msapplication-square310x310logo" href="./images/favicon.png">
     
         <title>Sandeep Ravindra</title>
     </head>
