--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="myCard">
                     <h2><strong>About Me</strong></h2>
                     <p style="font-size: 18px">
-                        Hi, I am SANDEEP RAVINDRA, a 3rd year undergrad student at SRM University, Chennai pursuing Computer Science and Engineering, 2017 batch.
+                        Hi, I am SANDEEP RAVINDRA, a 4th year undergrad student at SRM University, Chennai pursuing Computer Science and Engineering, 2017 batch.
                         <br>
                         I'm an ardent learner, actively seeking internship opportunities in software development.
                         <br>
@@ -143,7 +143,7 @@
                         <div class="row">
                             <div class="col-sm-4" id="resume">
                                 <h3 class="text-center"><strong>Resume</strong></h3><br>
-                                <a href="https://goo.gl/QfpW77" target="_blank">
+                                <a href="http://tinyurl.com/sandeepravindra" target="_blank">
                                     <i class="fa fa-download fa-5x"></i>
                                 </a>
                                 <br><br>
